policies/bundles/cis-k8s-v1.7.1/restrict-privileged-containers.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: cis-k8s-v1.7.1-restrict-privileged-containers
  labels:
    policycontroller.gke.io/bundleName: cis-k8s-v1.7.1
  annotations:
    policycontroller.gke.io/bundleVersion: 202403.0-preview
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'cis-k8s-v1.7.1',
        bundleDisplayName: 'CIS Kubernetes Benchmark v1.7.1',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-cis-k8s-benchmark',
        bundleVersion: '202403.0-preview',
        bundleDescription: 'Use the CIS Kubernetes Benchmark 1.7.1 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against the CIS Kubernetes Benchmark, which is a set of recommendations for configuring Kubernetes to support a robust security posture.',
        controlNumbers: '[5.2.2]',
        severity: 'UNSPECIFIED',
        description: 'Restricts containers with `securityContext.privileged` set to `true`.',
        remediation: 'Containers cannot run with `securityContext.privileged` set to `true`. Remove `securityContext.privileged: true` from your containers. See "Configure a Security Context for a Pod or Container" for more information: https://kubernetes.io/docs/tasks/configure-pod-container/security-context',
        minimumTemplateLibraryVersion: '1.11.1',
        constraintHash: '873189cf522a88880548ef043f8c61b64b10ebe533c22974007633439994b2bb'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod
    excludedNamespaces:
    - kube-system
    - clamav
